--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 <h1>GIT<h2>
+<input type="search" maxlenght="100" placeholder="Research">
+<button type="submit">Research</button>
 </body>
 </html>
