--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <h1>GIT<h2>
-<input type="search" maxlenght="100" placeholder="Research">
+<form action="page/research.php" method="get">
+<input type="search" name="research" maxlenght="100" placeholder="Research">
 <button type="submit">Research</button>
 </body>
 </html>
